Release 1.22.0 (#156)
* Release 1.22.0

* AdminPanel - MemoryMonitoring - Display max memory used, Order services by parameters

* AdminPanel - PerformanceReporting - Hide keys

* AdminPanel - PerformanceReporting - Display spinner when loading reports

* AdminPanel - ErrorReport - Display total count

* AdminPanel - PerformanceReporting - Periodically sync topic status

* AdminPanel - ErrorReport - Put a page selector to the bottom of the table

* AdminPanel - ErrorReport - Use spinner for loading

* EliteBase - Performance reporting for commodity trading

* ApphubCI - Dedicated setting for remote startup limit

* ApphubCI - Chain commands

* Calendar - Delete old structure

* Calendar - Spinner is displayed until all calls are finished

* Notebook - Display checked and total count of checklist items

* Notebook - Limit width of confirmation dialog

* Notebook - Search checklist items

* Calendar - Set selected date to today after midnight

* Notebook - Use spinner for all BE queries

* Platform - ErrorReporterService automatically logs errors

* Platform - AutoConfigurations for libs

* ApphubCI - GUI indicator for service startup

* ApphubCI - Set integration retry count

* EliteBase - Allow "No material trader" override

* Notebook - Sticky table header

* Platform - Get rid of ObjectMapperWrapper

* Calendar - Open occurrences on the right panel

* Calendar - View: Following weeks

* Extract SqlBuilder to lib

* Display INVALID_PARAM, number don't fall below min

* Timing of integration tests improved

* Check FTP connection

* Check FTP connection

* SkyXplore - Periodically delete 0 StoredResources

* SkyXplore - Periodically merge StoredResources

* SkyXplore - Use the common ProgressBar for Surface and Queue

* Calendar - Increased memory limit

* Storage - Periodically delete unknown files

* Preprod setup