@@ -10,6 +10,8 @@ import com.github.saphyra.apphub.integration.action.frontend.notebook.new_list_i
 import com.github.saphyra.apphub.integration.action.frontend.notebook.view.ViewChecklistActions;
 import com.github.saphyra.apphub.integration.core.SeleniumTest;
 import com.github.saphyra.apphub.integration.framework.AwaitilityWrapper;
+import com.github.saphyra.apphub.integration.framework.BiWrapper;
+import com.github.saphyra.apphub.integration.framework.CustomAssertions;
 import com.github.saphyra.apphub.integration.framework.Navigation;
 import com.github.saphyra.apphub.integration.framework.ToastMessageUtil;
 import com.github.saphyra.apphub.integration.framework.WebElementUtils;
@@ -23,6 +25,7 @@ import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
 import org.testng.annotations.Test;
 
+import java.util.List;
 import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -70,6 +73,36 @@ public class ChecklistCrudTest extends SeleniumTest {
         delete(driver);
     }
 
+    @Test(groups = {"fe", "notebook"})
+    public void checklistSearchAndCount() {
+        WebDriver driver = extractDriver();
+        Navigation.toIndexPage(getServerPort(), driver);
+        RegistrationParameters userData = RegistrationParameters.validParameters();
+        IndexPageActions.registerUser(driver, userData);
+
+        ModulesPageActions.openModule(getServerPort(), driver, ModuleLocation.NOTEBOOK);
+
+        NotebookUtils.newChecklist(getServerPort(), driver, CHECKLIST_TITLE, List.of(new BiWrapper<>(CHECKLIST_VALUE_1, false), new BiWrapper<>(CHECKLIST_VALUE_2, true)));
+
+        NotebookActions.findListItemByTitleValidated(driver, CHECKLIST_TITLE)
+            .open(driver);
+
+        //Search
+        ViewChecklistActions.setSearchText(driver, "2");
+        AwaitilityWrapper.awaitAssert(() -> {
+            CustomAssertions.singleListAssertThat(ViewChecklistActions.getItems(driver))
+                .extracting(ChecklistItem::getValue)
+                .isEqualTo(CHECKLIST_VALUE_2);
+        });
+        ViewChecklistActions.setSearchText(driver, "");
+
+        //Count
+        AwaitilityWrapper.awaitAssert(() -> {
+            assertThat(ViewChecklistActions.getCheckedItemCount(driver)).isEqualTo(1);
+            assertThat(ViewChecklistActions.getTotalItemCount(driver)).isEqualTo(2);
+        });
+    }
+
     private static void create_emptyTitle(WebDriver driver) {
         NewChecklistActions.fillTitle(driver, " ");
         NewChecklistActions.submit(driver);
@@ -79,7 +112,7 @@ public class ChecklistCrudTest extends SeleniumTest {
 
     private static void create_removeItem(WebDriver driver) {
         NewChecklistActions.getItems(driver)
-            .get(0)
+            .getFirst()
             .remove();
 
         assertThat(NewChecklistActions.getItems(driver)).isEmpty();
@@ -100,7 +133,7 @@ public class ChecklistCrudTest extends SeleniumTest {
 
     private static void create_moveItemDown(WebDriver driver) {
         NewChecklistActions.getItems(driver)
-            .get(0)
+            .getFirst()
             .moveDown();
 
         assertThat(NewChecklistActions.getItems(driver)).extracting(ChecklistItem::getValue).containsExactly(CHECKLIST_VALUE_2, CHECKLIST_VALUE_1);
@@ -116,7 +149,7 @@ public class ChecklistCrudTest extends SeleniumTest {
 
     private static void create_checkItem(WebDriver driver) {
         NewChecklistActions.getItems(driver)
-            .get(0)
+            .getFirst()
             .check();
 
         assertThat(NewChecklistActions.getItems(driver)).extracting(ChecklistItem::isChecked).containsExactly(true, false);
@@ -124,7 +157,7 @@ public class ChecklistCrudTest extends SeleniumTest {
 
     private static void create_uncheckItem(WebDriver driver) {
         NewChecklistActions.getItems(driver)
-            .get(0)
+            .getFirst()
             .uncheck();
 
         assertThat(NewChecklistActions.getItems(driver)).extracting(ChecklistItem::isChecked).containsExactly(false, false);
@@ -136,12 +169,12 @@ public class ChecklistCrudTest extends SeleniumTest {
             .assertTrue("Checklist was not created.");
 
         NotebookActions.findListItemByTitleValidated(driver, CATEGORY_TITLE)
-            .open();
+            .open(driver);
     }
 
     private static void edit_emptyTitle(WebDriver driver) {
         NotebookActions.findListItemByTitleValidated(driver, CHECKLIST_TITLE)
-            .open(() -> WebElementUtils.getIfPresent(() -> driver.findElement(By.id("notebook-content-checklist"))).isPresent());
+            .open(() -> WebElementUtils.waitForSpinnerToDisappear(driver) && WebElementUtils.getIfPresent(() -> driver.findElement(By.id("notebook-content-checklist"))).isPresent());
 
         ViewChecklistActions.enableEditing(driver);
         ViewChecklistActions.fillTitle(driver, " ");
@@ -152,8 +185,9 @@ public class ChecklistCrudTest extends SeleniumTest {
 
     private static void edit_discard(WebDriver driver) {
         ViewChecklistActions.fillTitle(driver, NEW_CHECKLIST_TITLE);
-        ChecklistItem checklistItem = ViewChecklistActions.getItems(driver)
-            .get(0);
+        ChecklistItem checklistItem = AwaitilityWrapper.getListWithWait(() -> ViewChecklistActions.getItems(driver), list -> !list.isEmpty())
+            .getFirst();
+
         checklistItem.check();
         checklistItem.setValue(NEW_VALUE);
         NewChecklistActions.getItems(driver)
@@ -176,7 +210,7 @@ public class ChecklistCrudTest extends SeleniumTest {
 
         ViewChecklistActions.fillTitle(driver, NEW_CHECKLIST_TITLE);
         checklistItem = ViewChecklistActions.getItems(driver)
-            .get(0);
+            .getFirst();
         checklistItem.check();
         checklistItem.setValue(NEW_VALUE);
         ViewChecklistActions.getItems(driver)
@@ -194,8 +228,10 @@ public class ChecklistCrudTest extends SeleniumTest {
             .orElseThrow(() -> new RuntimeException("ListItem not found with title " + NEW_CHECKLIST_TITLE))
             .open(() -> WebElementUtils.getIfPresent(() -> driver.findElement(By.id("notebook-content-checklist"))).isPresent());
 
-        assertThat(ViewChecklistActions.getItems(driver)).extracting(ChecklistItem::getValue).containsExactly(NEW_VALUE);
-        assertThat(ViewChecklistActions.getItems(driver)).extracting(ChecklistItem::isChecked).containsExactly(true);
+        AwaitilityWrapper.awaitAssert(() -> {
+            assertThat(ViewChecklistActions.getItems(driver)).extracting(ChecklistItem::getValue).containsExactly(NEW_VALUE);
+            assertThat(ViewChecklistActions.getItems(driver)).extracting(ChecklistItem::isChecked).containsExactly(true);
+        });
     }
 
     private static void orderItems(WebDriver driver) {
@@ -210,9 +246,11 @@ public class ChecklistCrudTest extends SeleniumTest {
             .until(() -> ViewChecklistActions.getItems(driver).size() == 3)
             .assertTrue("Checklist modifications are not saved.");
 
+        WebElementUtils.waitForSpinnerToDisappear(driver);
+
         ViewChecklistActions.orderItems(driver);
 
-        assertThat(ViewChecklistActions.getItems(driver)).extracting(ChecklistItem::getValue).containsExactly(NEW_VALUE, CHECKLIST_VALUE_1, CHECKLIST_VALUE_2);
+        AwaitilityWrapper.awaitAssert(() -> assertThat(ViewChecklistActions.getItems(driver)).extracting(ChecklistItem::getValue).containsExactly(NEW_VALUE, CHECKLIST_VALUE_1, CHECKLIST_VALUE_2));
     }
 
     private static void deleteChecked(WebDriver driver) {
@@ -226,30 +264,34 @@ public class ChecklistCrudTest extends SeleniumTest {
 
     private static void checkItem(WebDriver driver) {
         ViewChecklistActions.getItems(driver)
-            .get(0)
+            .getFirst()
             .check();
+
+        WebElementUtils.waitForSpinnerToDisappear(driver);
 
         assertThat(ViewChecklistActions.getItems(driver)).extracting(ChecklistItem::isChecked).containsExactly(true, false);
     }
 
     private static void uncheckItem(WebDriver driver) {
         ViewChecklistActions.getItems(driver)
-            .get(0)
+            .getFirst()
             .uncheck();
+
+        WebElementUtils.waitForSpinnerToDisappear(driver);
 
         assertThat(ViewChecklistActions.getItems(driver)).extracting(ChecklistItem::isChecked).containsExactly(false, false);
     }
 
     private static void editChecklistItem(WebDriver driver) {
         ViewChecklistActions.getItems(driver)
-            .get(0)
+            .getFirst()
             .edit(driver, NEW_VALUE);
 
         ViewChecklistActions.close(driver);
         NotebookActions.findListItemByTitleValidated(driver, NEW_CHECKLIST_TITLE)
-            .open();
+            .open(driver);
 
-        assertThat(ViewChecklistActions.getItems(driver).get(0).getValue()).isEqualTo(NEW_VALUE);
+        assertThat(ViewChecklistActions.getItems(driver).getFirst().getValue()).isEqualTo(NEW_VALUE);
     }
 
     private static void delete(WebDriver driver) {
