@@ -96,7 +96,7 @@ public class TableCrudTest extends SeleniumTest {
 
     private static void create_removeRow(WebDriver driver) {
         NewTableActions.getRows(driver)
-            .get(0)
+            .getFirst()
             .remove();
 
         assertThat(NewTableActions.getRows(driver)).hasSize(1);
@@ -106,43 +106,43 @@ public class TableCrudTest extends SeleniumTest {
         NewTableActions.addColumnToEnd(driver);
 
         assertThat(NewTableActions.getTableHeads(driver)).hasSize(2);
-        assertThat(NewTableActions.getRows(driver).get(0).getColumns()).hasSize(2);
+        assertThat(NewTableActions.getRows(driver).getFirst().getColumns()).hasSize(2);
     }
 
     private static void create_removeColumn(WebDriver driver) {
         NewTableActions.getTableHeads(driver)
-            .get(0)
+            .getFirst()
             .remove();
 
         assertThat(NewTableActions.getTableHeads(driver)).hasSize(1);
-        assertThat(NewTableActions.getRows(driver).get(0).getColumns()).hasSize(1);
+        assertThat(NewTableActions.getRows(driver).getFirst().getColumns()).hasSize(1);
     }
 
     private static void create_moveColumnRight(WebDriver driver) {
         NewTableActions.addColumnToEnd(driver);
         NewTableActions.getTableHeads(driver)
-            .get(0)
+            .getFirst()
             .setValue(TABLE_HEAD_1);
         NewTableActions.getTableHeads(driver)
             .get(1)
             .setValue(TABLE_HEAD_2);
         NewTableActions.getRows(driver)
-            .get(0)
+            .getFirst()
             .getColumns()
-            .get(0)
+            .getFirst()
             .setValue(COLUMN_1);
         NewTableActions.getRows(driver)
-            .get(0)
+            .getFirst()
             .getColumns()
             .get(1)
             .setValue(COLUMN_2);
 
         NewTableActions.getTableHeads(driver)
-            .get(0)
+            .getFirst()
             .moveRight();
 
         assertThat(NewTableActions.getTableHeads(driver)).extracting(TableHead::getValue).containsExactly(TABLE_HEAD_2, TABLE_HEAD_1);
-        assertThat(NewTableActions.getRows(driver).get(0).getColumns()).extracting(TableColumn::getValue).containsExactly(COLUMN_2, COLUMN_1);
+        assertThat(NewTableActions.getRows(driver).getFirst().getColumns()).extracting(TableColumn::getValue).containsExactly(COLUMN_2, COLUMN_1);
     }
 
     private static void create_moveColumnLeft(WebDriver driver) {
@@ -151,7 +151,7 @@ public class TableCrudTest extends SeleniumTest {
             .moveLeft();
 
         assertThat(NewTableActions.getTableHeads(driver)).extracting(TableHead::getValue).containsExactly(TABLE_HEAD_1, TABLE_HEAD_2);
-        assertThat(NewTableActions.getRows(driver).get(0).getColumns()).extracting(TableColumn::getValue).containsExactly(COLUMN_1, COLUMN_2);
+        assertThat(NewTableActions.getRows(driver).getFirst().getColumns()).extracting(TableColumn::getValue).containsExactly(COLUMN_1, COLUMN_2);
     }
 
     private static void create_moveRowDown(WebDriver driver) {
@@ -163,14 +163,14 @@ public class TableCrudTest extends SeleniumTest {
         NewTableActions.getRows(driver)
             .get(1)
             .getColumns()
-            .get(0)
+            .getFirst()
             .setValue(COLUMN_2);
 
         NewTableActions.getRows(driver)
-            .get(0)
+            .getFirst()
             .moveDown();
 
-        assertThat(NewTableActions.getRows(driver)).extracting(tableRow -> tableRow.getColumns().get(0).getValue()).containsExactly(COLUMN_2, COLUMN_1);
+        assertThat(NewTableActions.getRows(driver)).extracting(tableRow -> tableRow.getColumns().getFirst().getValue()).containsExactly(COLUMN_2, COLUMN_1);
     }
 
     private static void create_moveRowUp(WebDriver driver) {
@@ -178,7 +178,7 @@ public class TableCrudTest extends SeleniumTest {
             .get(1)
             .moveUp();
 
-        assertThat(NewTableActions.getRows(driver)).extracting(tableRow -> tableRow.getColumns().get(0).getValue()).containsExactly(COLUMN_1, COLUMN_2);
+        assertThat(NewTableActions.getRows(driver)).extracting(tableRow -> tableRow.getColumns().getFirst().getValue()).containsExactly(COLUMN_1, COLUMN_2);
     }
 
     private static void create(WebDriver driver) {
@@ -196,8 +196,10 @@ public class TableCrudTest extends SeleniumTest {
         NotebookActions.findListItemByTitleValidated(driver, TABLE_TITLE)
             .open(() -> WebElementUtils.getIfPresent(() -> driver.findElement(By.id("notebook-content-table"))).isPresent());
 
-        assertThat(ViewTableActions.getTableHeads(driver)).extracting(TableHead::getValue).containsExactly(TABLE_HEAD_1);
-        assertThat(ViewTableActions.getRows(driver)).extracting(tableRow -> tableRow.getColumns().get(0).getValue()).containsExactly(COLUMN_1, COLUMN_2);
+        AwaitilityWrapper.awaitAssert(() -> {
+            assertThat(ViewTableActions.getTableHeads(driver)).extracting(TableHead::getValue).containsExactly(TABLE_HEAD_1);
+            assertThat(ViewTableActions.getRows(driver)).extracting(tableRow -> tableRow.getColumns().getFirst().getValue()).containsExactly(COLUMN_1, COLUMN_2);
+        });
     }
 
     private static void edit_blankTitle(WebDriver driver) {
@@ -213,7 +215,7 @@ public class TableCrudTest extends SeleniumTest {
         ViewTableActions.setTitle(driver, NEW_TABLE_TITLE);
 
         ViewTableActions.getTableHeads(driver)
-            .get(0)
+            .getFirst()
             .setValue(" ");
 
         ViewTableActions.saveChanges(driver);
@@ -241,7 +243,7 @@ public class TableCrudTest extends SeleniumTest {
 
     private static void edit_removeRow(WebDriver driver) {
         ViewTableActions.getRows(driver)
-            .get(0)
+            .getFirst()
             .remove();
 
         assertThat(ViewTableActions.getRows(driver)).hasSize(2);
@@ -251,33 +253,33 @@ public class TableCrudTest extends SeleniumTest {
         ViewTableActions.addColumnToEnd(driver);
 
         assertThat(ViewTableActions.getTableHeads(driver)).hasSize(2);
-        assertThat(ViewTableActions.getRows(driver).get(0).getColumns()).hasSize(2);
+        assertThat(ViewTableActions.getRows(driver).getFirst().getColumns()).hasSize(2);
     }
 
     private static void edit_moveColumnRight(WebDriver driver) {
         ViewTableActions.getTableHeads(driver)
-            .get(0)
+            .getFirst()
             .setValue(TABLE_HEAD_1);
         ViewTableActions.getTableHeads(driver)
             .get(1)
             .setValue(TABLE_HEAD_2);
         ViewTableActions.getRows(driver)
-            .get(0)
+            .getFirst()
             .getColumns()
-            .get(0)
+            .getFirst()
             .setValue(COLUMN_1);
         ViewTableActions.getRows(driver)
-            .get(0)
+            .getFirst()
             .getColumns()
             .get(1)
             .setValue(COLUMN_2);
 
         ViewTableActions.getTableHeads(driver)
-            .get(0)
+            .getFirst()
             .moveRight();
 
         assertThat(ViewTableActions.getTableHeads(driver)).extracting(TableHead::getValue).containsExactly(TABLE_HEAD_2, TABLE_HEAD_1);
-        assertThat(ViewTableActions.getRows(driver).get(0).getColumns()).extracting(TableColumn::getValue).containsExactly(COLUMN_2, COLUMN_1);
+        assertThat(ViewTableActions.getRows(driver).getFirst().getColumns()).extracting(TableColumn::getValue).containsExactly(COLUMN_2, COLUMN_1);
     }
 
     private static void edit_moveColumnLeft(WebDriver driver) {
@@ -286,35 +288,35 @@ public class TableCrudTest extends SeleniumTest {
             .moveLeft();
 
         assertThat(ViewTableActions.getTableHeads(driver)).extracting(TableHead::getValue).containsExactly(TABLE_HEAD_1, TABLE_HEAD_2);
-        assertThat(ViewTableActions.getRows(driver).get(0).getColumns()).extracting(TableColumn::getValue).containsExactly(COLUMN_1, COLUMN_2);
+        assertThat(ViewTableActions.getRows(driver).getFirst().getColumns()).extracting(TableColumn::getValue).containsExactly(COLUMN_1, COLUMN_2);
     }
 
     private static void edit_removeColumn(WebDriver driver) {
         ViewTableActions.getTableHeads(driver)
-            .get(0)
+            .getFirst()
             .remove();
 
         assertThat(ViewTableActions.getTableHeads(driver)).hasSize(1);
-        assertThat(ViewTableActions.getRows(driver).get(0).getColumns()).hasSize(1);
+        assertThat(ViewTableActions.getRows(driver).getFirst().getColumns()).hasSize(1);
     }
 
     private static void edit_moveRowDown(WebDriver driver) {
         ViewTableActions.getRows(driver)
-            .get(0)
+            .getFirst()
             .getColumns()
-            .get(0)
+            .getFirst()
             .setValue(COLUMN_1);
         ViewTableActions.getRows(driver)
             .get(1)
             .getColumns()
-            .get(0)
+            .getFirst()
             .setValue(COLUMN_2);
 
         ViewTableActions.getRows(driver)
-            .get(0)
+            .getFirst()
             .moveDown();
 
-        assertThat(ViewTableActions.getRows(driver)).extracting(tableRow -> tableRow.getColumns().get(0).getValue()).containsExactly(COLUMN_2, COLUMN_1);
+        assertThat(ViewTableActions.getRows(driver)).extracting(tableRow -> tableRow.getColumns().getFirst().getValue()).containsExactly(COLUMN_2, COLUMN_1);
     }
 
     private static void edit_moveRowUp(WebDriver driver) {
@@ -322,22 +324,22 @@ public class TableCrudTest extends SeleniumTest {
             .get(1)
             .moveUp();
 
-        assertThat(ViewTableActions.getRows(driver)).extracting(tableRow -> tableRow.getColumns().get(0).getValue()).containsExactly(COLUMN_1, COLUMN_2);
+        assertThat(ViewTableActions.getRows(driver)).extracting(tableRow -> tableRow.getColumns().getFirst().getValue()).containsExactly(COLUMN_1, COLUMN_2);
     }
 
     private static void edit(WebDriver driver) {
         ViewTableActions.getTableHeads(driver)
-            .get(0)
+            .getFirst()
             .setValue(TABLE_HEAD_2);
         ViewTableActions.getRows(driver)
-            .get(0)
+            .getFirst()
             .getColumns()
-            .get(0)
+            .getFirst()
             .setValue(COLUMN_2);
         ViewTableActions.getRows(driver)
             .get(1)
             .getColumns()
-            .get(0)
+            .getFirst()
             .setValue(COLUMN_1);
         ViewTableActions.setTitle(driver, NEW_TABLE_TITLE);
 
@@ -348,7 +350,7 @@ public class TableCrudTest extends SeleniumTest {
             .assertTrue("Editing is still enabled");
 
         assertThat(ViewTableActions.getTableHeads(driver)).extracting(TableHead::getValue).containsExactly(TABLE_HEAD_2);
-        assertThat(ViewTableActions.getRows(driver)).extracting(tableRow -> tableRow.getColumns().get(0).getValue()).containsExactly(COLUMN_2, COLUMN_1);
+        assertThat(ViewTableActions.getRows(driver)).extracting(tableRow -> tableRow.getColumns().getFirst().getValue()).containsExactly(COLUMN_2, COLUMN_1);
     }
 
     private static void delete(WebDriver driver) {
